--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
 @import url('./navbar.css');
 @import url('./firstSection.css');
+@import url('./secondSection.css');
 
 :root {
     --background-color: #FAFAFA;
