@igorgll [Task: Creating third section]

--- a/css/firstSection.css
+++ b/css/firstSection.css
@@ -1,5 +1,8 @@
-#first-Container {
-    bottom: 10000px;
+#rowWidth {
+    width: 88.938rem;
+    height: 31.938rem;
+    left: 9.563rem;
+    top: 16.125rem;
 }
 
 .title {
