--- a/css/navbar.css
+++ b/css/navbar.css
@@ -19,6 +19,10 @@
     gap: 5.75rem;
 }
 
+.navbar-brand:hover {
+    color: var(--primary-color);
+}
+
 .navbar-nav {
     align-items: flex-start;
     
@@ -37,6 +41,10 @@
     font-weight: 400;
     font-size: 1.5rem !important;
     line-height: 1rem;
+}
+
+.navbar-link:hover {
+    color: var(--primary-color);
 }
 
 .button {
