--- a/css/global.css
+++ b/css/global.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+
 @import url('./navbar.css');
 @import url('./firstSection.css');
 @import url('./secondSection.css');
 @import url('./thirdSection.css');
+@import url('./fourthSection.css');
 
 :root {
     --background-color: #FAFAFA;
