--- a/css/thirdSection.css
+++ b/css/thirdSection.css
@@ -1,8 +1,3 @@
-#rectangleImage {
-    width: 40.779rem;
-    height: 28.313rem;
-}
-
 #h6ThirdSection {
     color: var(--primary-color);
 
@@ -43,7 +38,8 @@
     height: 12.438rem;
 }
 
-#rowThirdSection {
-    width: 88.591rem;
-    height: 28.313rem;
+.checks_img {
+    width: 24px;
+    height: 24px;
 }
+
